fixed dropdown on mobile

--- a/src/layouts/header/dropdown.css
+++ b/src/layouts/header/dropdown.css
@@ -8,6 +8,7 @@
   left: -40%;
   transform: translate(-50%, 0);
   min-width: 220px;
+  border: 0;
 }
 
 .nav-link {
